--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "laravel-mix-starter",
+  "name": "kilka-php",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,16 +12,23 @@
     "prod": "npm run production",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
-  "author": "vahid alvandi",
-  "license": "ISC",
+  "author": "ashkan fekri",
+  "license": "MIT",
   "devDependencies": {
-    "cross-env": "^6.0.3",
+    "axios": "^0.19",
+    "bootstrap": "^4.0.0",
+    "cross-env": "^7.0",
+    "jquery": "^3.2",
     "laravel-mix": "^5.0.1",
-    "node-sass": "^4.13.0",
-    "resolve-url-loader": "^3.1.0",
+    "lodash": "^4.17.13",
+    "popper.js": "^1.12",
+    "resolve-url-loader": "^2.3.1",
+    "sass": "^1.20.1",
     "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue": "^2.5.17",
+    "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
+    "vue-router": "^3.1.6"
   }
 }
